--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "clsx": "^2.1.1",
     "fs": "^0.0.1-security",
     "lucide-react": "^0.552.0",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16"
   },
