--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tauri-app",
   "private": true,
-  "version": "0.1.71",
+  "version": "0.1.72",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,6 +13,7 @@
     "@ai-sdk/google": "^2.0.27",
     "@ai-sdk/openai": "^3.0.0-beta.52",
     "@ai-sdk/react": "^3.0.0-beta.93",
+    "@openrouter/ai-sdk-provider": "^1.2.1",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
