--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tauri-app",
   "private": true,
-  "version": "0.1.90",
+  "version": "0.1.91",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -41,6 +41,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-drag-drop-files": "^3.1.0",
+    "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "sharp": "^0.34.5",
     "sonner": "^2.0.7",
