--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "tauri-app"
-version = "0.1.0"
-description = "A Tauri App"
+name = "Tagpix AI"
+version = "0.1.2"
+description = "AI powered image metadata manager"
 authors = ["you"]
 edition = "2021"
 
