--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -2,7 +2,7 @@
 name = "Tagpix AI"
 version = "0.1.2"
 description = "AI powered image metadata manager"
-authors = ["you"]
+authors = ["arrifat346afs"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
