feat(ci): Generate changelog in publish workflow This commit adds logic to the `publish.yml` workflow to fetch commit messages since the last tag and include them in the GitHub release body. It also includes a minor styling fix in `Navbar.tsx`.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -54,6 +54,31 @@ jobs:
       - name: install frontend dependencies
         run: bun install
 
+      - name: Get commit messages since last tag
+        id: changelog
+        run: |
+          # Get the latest tag
+          LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
+
+          if [ -z "$LATEST_TAG" ]; then
+            # No previous tag, get all commits
+            COMMITS=$(git log --pretty=format:"- %s" --no-merges)
+          else
+            # Get commits since last tag
+            COMMITS=$(git log ${LATEST_TAG}..HEAD --pretty=format:"- %s" --no-merges)
+          fi
+
+          # Handle empty commits
+          if [ -z "$COMMITS" ]; then
+            COMMITS="- No new changes"
+          fi
+
+          # Escape for GitHub Actions output (handle multiline)
+          EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
+          echo "changelog<<$EOF" >> $GITHUB_OUTPUT
+          echo "$COMMITS" >> $GITHUB_OUTPUT
+          echo "$EOF" >> $GITHUB_OUTPUT
+
       - uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -63,7 +88,13 @@ jobs:
         with:
           tagName: app-v__VERSION__ # the action automatically replaces __VERSION__ with the app version.
           releaseName: 'Tagpix AI v__VERSION__'
-          releaseBody: 'See the assets to download this version and install.'
+          releaseBody: |
+            ## What's Changed
+
+            ${{ steps.changelog.outputs.changelog }}
+
+            ---
+            See the assets below to download this version and install.
           releaseDraft: true
           prerelease: false
           args: ${{ matrix.args }}
