--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,6 +29,7 @@ ruurd_photos_thumbnail_generation = "0.3.2"
 uuid = { version = "1.18.1", features = ["v4"] }
 base64 = "0.21"
 image = { version = "0.25.8", features = ["jpeg"] }
+tauri-plugin-process = "2.3.1"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-updater = "2"
