refactor(updater): Move UpdateChecker component usage Removed `UpdateChecker` from `App.tsx` and added it to `LandingPage.tsx` and `Navbar.tsx`.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,15 @@ dist-ssr
 *.dll
 *.exe
 *.env
+
+# Auto-committer ignored files
+.vscode/**
+.idea/**
+.vs/**
+node_modules/**
+.git/**
+dist/**
+build/**
+*.swp
+*.swo
+Thumbs.db
