--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ai": "^6.0.0-beta.99",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "exiftool-vendored": "^33.5.0",
     "fs": "^0.0.1-security",
     "lucide-react": "^0.552.0",
     "motion": "^12.23.24",
