--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tauri-apps/plugin-fs": "~2.4.4",
     "@tauri-apps/plugin-opener": "^2.5.2",
     "@tauri-apps/plugin-process": "^2.3.1",
+    "@tauri-apps/plugin-shell": "^2.3.3",
     "@tauri-apps/plugin-updater": "~2",
     "@tauri-apps/plugin-upload": "~2.3.2",
     "ai": "^6.0.0-beta.99",
