--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,6 +25,7 @@ serde_json = "1"
 tauri-plugin-upload = "2"
 tauri-plugin-dialog = "2"
 tauri-plugin-fs = "2"
+tauri-plugin-shell = "2"
 ruurd_photos_thumbnail_generation = "0.3.2"
 uuid = { version = "1.18.1", features = ["v4"] }
 base64 = "0.21"
