--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,6 +30,7 @@ uuid = { version = "1.18.1", features = ["v4"] }
 base64 = "0.21"
 image = { version = "0.25.8", features = ["jpeg"] }
 tauri-plugin-process = "2.3.1"
+exiftool = "0.3.0"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-updater = "2"
