--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tagpixai"
-version = "1.0.0"
+version = "1.0.2"
 description = "AI powered image metadata manager"
 authors = ["arrifat346afs"]
 edition = "2021"
@@ -31,6 +31,7 @@ base64 = "0.21"
 image = { version = "0.25.8", features = ["jpeg"] }
 tauri-plugin-process = "2.3.1"
 exiftool = "0.3.0"
+tauri-plugin-os = "2"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-updater = "2"
