ci: Configure Tauri publish workflow with Bun and debug
Explicitly set `tauriScript` to `bun run tauri` to ensure Tauri commands in the publish workflow are executed using Bun. This aligns with the project's dependency management.

Additionally, the `--debug` flag has been added to the release arguments for verbose logging during the release creation process, aiding in troubleshooting.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -101,5 +101,6 @@ jobs:
             See the assets below to download this version and install.
           releaseDraft: true
           prerelease: false
-          args: ${{ matrix.args }}
+          args: ${{ matrix.args }} --debug
+          tauriScript: bun run tauri
 
