--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -101,6 +101,4 @@ jobs:
             See the assets below to download this version and install.
           releaseDraft: true
           prerelease: false
-          args: ${{ matrix.args }} --debug
-          tauriScript: bun run tauri
-
+          args: ${{ matrix.args }}
