--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cmdk": "^1.1.1",
     "exiftool-vendored": "^33.5.0",
     "fs": "^0.0.1-security",
+    "gemini": "^7.5.2",
     "lucide-react": "^0.552.0",
     "motion": "^12.23.25",
     "next-themes": "^0.4.6",
