--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,6 +3,11 @@ name: 'publish'
 on:
   workflow_dispatch:
 
+env:
+  ARCH: x86_64
+  # Dependencies required for the Arch package
+  DEPENDENCIES_ARCH: "'libappindicator-gtk3' 'webkit2gtk-4.1' 'gtk3' 'xdotool'"
+
 jobs:
   publish-tauri:
     permissions:
@@ -11,7 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - platform: 'macos-latest' # for Arm based macs (M1 and above).
+          - platform: 'macos-latest'
             args: '--target aarch64-apple-darwin'
           - platform: 'ubuntu-22.04'
             args: ''
@@ -24,14 +29,31 @@ jobs:
 
       - name: install dependencies (ubuntu only)
         if: matrix.platform == 'ubuntu-22.04'
+        # Combined dependencies for Tauri + Arch packaging
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf nasm
+          sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf nasm libayatana-appindicator3-dev libxdo3 libxdo-dev
 
       - name: setup node
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
+
+      # --- ADDED: Google Client Envs from new.yaml ---
+      - name: Replace environment variables in config
+        env:
+          TAURI_GOOGLE_CLIENT_ID: ${{ secrets.TAURI_GOOGLE_CLIENT_ID }}
+          TAURI_GOOGLE_CLIENT_SECRET: ${{ secrets.TAURI_GOOGLE_CLIENT_SECRET }}
+        run: node ./.github/replace-config.js
+
+      - name: get package info
+        id: get-package
+        shell: bash
+        run: |
+          echo "name=$(node -p "require('./package.json').name")" >> $GITHUB_OUTPUT
+          echo "version=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
+          echo "description=$(node -p "require('./package.json').description")" >> $GITHUB_OUTPUT
+          echo "license=$(node -p "require('./package.json').license")" >> $GITHUB_OUTPUT
 
       - name: setup bun
         uses: oven-sh/setup-bun@v2
@@ -41,7 +63,6 @@ jobs:
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
         with:
-          # Those targets are only used on macos runners so it's in an `if` to slightly speed up windows and linux builds.
           targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
 
       - name: Rust cache
@@ -56,26 +77,15 @@ jobs:
         id: changelog
         shell: bash
         run: |
-          # Get the latest tag
           LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
-
           if [ -z "$LATEST_TAG" ]; then
-            # No previous tag, get all commits
-            # Format: 'Author|Message (Hash)'
-            # Filter out github-actions[bot]
-            # Convert to list format
             COMMITS=$(git log --oneline --pretty=format:"%an|%s (%h)" | grep -v "^github-actions\[bot\]|" | sed 's/^[^|]*|/- /')
           else
-            # Get commits since last tag
             COMMITS=$(git log ${LATEST_TAG}..HEAD --oneline --pretty=format:"%an|%s (%h)" | grep -v "^github-actions\[bot\]|" | sed 's/^[^|]*|/- /')
           fi
-
-          # Handle empty commits
           if [ -z "$COMMITS" ]; then
             COMMITS="- No new changes"
           fi
-
-          # Escape for GitHub Actions output (handle multiline)
           EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
           echo "changelog<<$EOF" >> $GITHUB_OUTPUT
           echo "$COMMITS" >> $GITHUB_OUTPUT
@@ -90,7 +100,7 @@ jobs:
           NO_STRIP: ${{ matrix.platform == 'ubuntu-22.04' && '1' || '' }}
           LINUXDEPLOY_EXCLUDE_LIBS: ${{ matrix.platform == 'ubuntu-22.04' && 'libEGL.so,libGL.so,libgbm.so,libGLESv2.so' || '' }}
         with:
-          tagName: app-v__VERSION__ # the action automatically replaces __VERSION__ with the app version.
+          tagName: app-v__VERSION__
           releaseName: 'Tagpix AI v__VERSION__'
           releaseBody: |
             ## What's Changed
@@ -102,3 +112,57 @@ jobs:
           releaseDraft: true
           prerelease: false
           args: ${{ matrix.args }}
+
+      # --- ARCH LINUX SUPPORT START ---
+
+      - name: copy deb package && create PKGBUILD file (ubuntu only)
+        if: matrix.platform == 'ubuntu-22.04'
+        env:
+          NAME_BIN: ${{ steps.get-package.outputs.name }}-bin
+          DEB_PKG_NAME: ${{ steps.get-package.outputs.name }}_${{ steps.get-package.outputs.version }}_amd64.deb
+          DEB_PKG_PATH: ./src-tauri/target/release/bundle/deb/
+          DEB_PKG_RENAMED: ${{ steps.get-package.outputs.name }}-${{ steps.get-package.outputs.version }}-${{ env.ARCH }}.deb
+          TAG_NAME: app-v${{ steps.get-package.outputs.version }}
+        run: |
+          mkdir -p ${{ env.NAME_BIN }}
+          cp -fr ${{ env.DEB_PKG_PATH }}${{ env.DEB_PKG_NAME }} ${{ env.NAME_BIN }}/${{ env.DEB_PKG_RENAMED }} 
+          
+          cat <<EOF > ./${{ env.NAME_BIN }}/PKGBUILD
+            pkgname=${{ env.NAME_BIN }}
+            pkgver=${{ steps.get-package.outputs.version }}
+            md5sums=('$(md5sum ${{ env.NAME_BIN }}/${{ env.DEB_PKG_RENAMED }}  | awk '{print $1}')')
+            pkgrel=1
+            depends=(${{ env.DEPENDENCIES_ARCH }})
+            pkgdesc='${{ steps.get-package.outputs.description }}'
+            arch=('${{ env.ARCH }}')
+            url="https://github.com/${{ github.repository }}"
+            license=('${{ steps.get-package.outputs.license }}')
+            source=("\$url/releases/download/${{ env.TAG_NAME }}/${{ env.DEB_PKG_RENAMED }}")
+
+            build() {
+                rm control.tar.gz
+                tar xvf data.tar.gz
+            }
+
+            package() {
+                cp -fr usr/ \${pkgdir}
+            }
+          EOF
+          cat ${{ env.NAME_BIN }}/PKGBUILD
+
+      - name: create arch package (ubuntu only)
+        if: matrix.platform == 'ubuntu-22.04'
+        uses: 2m/arch-pkgbuild-builder@v1.17
+        with:
+          debug: true
+          target: pkgbuild
+          pkgname: ${{ steps.get-package.outputs.name }}-bin/
+
+      - name: upload arch release (ubuntu only)
+        if: matrix.platform == 'ubuntu-22.04'
+        uses: softprops/action-gh-release@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: app-v${{ steps.get-package.outputs.version }}
+          files: |
+            ${{ steps.get-package.outputs.name }}-bin/${{ steps.get-package.outputs.name }}-bin-${{ steps.get-package.outputs.version }}-1-${{ env.ARCH }}.pkg.tar.zst
