--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tagpixai"
+name = "Descify"
 version = "1.0.3"
 description = "AI powered image metadata manager"
 authors = ["arrifat346afs"]
