--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@ai-sdk/google": "^2.0.44",
-    "@ai-sdk/openai": "^3.0.0-beta.83",
-    "@ai-sdk/react": "^3.0.0-beta.132",
-    "@openrouter/ai-sdk-provider": "^1.4.0",
+    "@ai-sdk/google": "^2.0.52",
+    "@ai-sdk/openai": "^3.0.2",
+    "@ai-sdk/react": "^3.0.5",
+    "@openrouter/ai-sdk-provider": "^1.5.4",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -26,17 +26,17 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@tailwindcss/vite": "^4.1.17",
+    "@tailwindcss/vite": "^4.1.18",
     "@tauri-apps/api": "^2.9.1",
-    "@tauri-apps/plugin-dialog": "~2",
-    "@tauri-apps/plugin-fs": "~2",
+    "@tauri-apps/plugin-dialog": "~2.4.2",
+    "@tauri-apps/plugin-fs": "~2.4.4",
     "@tauri-apps/plugin-opener": "^2.5.2",
-    "@tauri-apps/plugin-os": "~2",
+    "@tauri-apps/plugin-os": "~2.3.2",
     "@tauri-apps/plugin-process": "^2.3.1",
     "@tauri-apps/plugin-shell": "^2.3.3",
     "@tauri-apps/plugin-updater": "~2.9.0",
     "@tauri-apps/plugin-upload": "~2.3.2",
-    "ai": "^6.0.0-beta.131",
+    "ai": "^6.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -44,7 +44,7 @@
     "fs": "^0.0.1-security",
     "gemini": "^7.5.2",
     "lucide-react": "^0.552.0",
-    "motion": "^12.23.25",
+    "motion": "^12.23.26",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -53,11 +53,11 @@
     "sharp": "^0.34.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2.9.5",
-    "@types/node": "^24.10.1",
+    "@tauri-apps/cli": "^2.9.6",
+    "@types/node": "^24.10.4",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.7.0",
