--- a/package.json
+++ b/package.json
@@ -50,10 +50,10 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
-    "sharp": "^0.34.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "thumbo": "^1.0.8"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2.9.6",
@@ -61,6 +61,7 @@
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.7.0",
+    "baseline-browser-mapping": "^2.9.15",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.6.3",
     "vite": "^6.4.1"
