--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/vite": "^4.1.18",
     "@tauri-apps/api": "^2.9.1",
     "@tauri-apps/plugin-dialog": "~2.4.2",
@@ -43,6 +44,7 @@
     "exiftool-vendored": "^33.5.0",
     "fs": "^0.0.1-security",
     "gemini": "^7.5.2",
+    "immer": "^11.1.3",
     "lucide-react": "^0.552.0",
     "motion": "^12.24.0",
     "next-themes": "^0.4.6",
@@ -50,6 +52,8 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
